# flow-ultra-idf

./: CHECKLIST_TECNICO_HIDROMETRO.md  CMakeLists.txt  DOCUMENTACAO_FIRMWARE.md  PLANO_EXECUCAO_P0_P1_P2.md  PROTOCOLO_MESH_AGENDADO.md  PROTOCOLO_NODE_GATEWAY.md  sdkconfig.defaults  sdkconfig.defaults.bench  sdkconfig.defaults.bench-deepsleep  sdkconfig.defaults.meter  sdkconfig.defaults.root  sdkconfig.defaults.subroot
.claude/: settings.json
docs/: Teste_Consumo_Subroot_PPK2.docx
main/: CMakeLists.txt  Kconfig  as6031_remote.c  as6031_remote.h  e220_lora.c  e220_lora.h  espnow_test_module.c  espnow_test_module.h  flow_packet.h  flow_power.c  flow_power.h  flow_sync.c  flow_sync.h  lora_test_config.h  lora_test_module.c  lora_test_module.h  main.c  mesh_dedup.c  mesh_dedup.h  meter_node.c  meter_node.h  meter_tx_test.c  meter_tx_test.h  root_node.c  root_node.h  subroot_node.c  subroot_node.h  sx1276_lora.c  sx1276_lora.h
